--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,17 @@
+BUG: przy zmianie kategorii notatki, jej tytuł zmienia się na domyślny
+
 potwierdzenie usunięcia notatki
-
-potwierdzenie usunięcia kateorii z przesunięciem notatek do top, albo do rodzica usuwanej kategorii
-
-drag and drop dla strukturyzacji drzewa notatek (jak drzewa plików i folderów w VSCode)
 
 auto save z historią edycji po każdym save (historia zapisana lokalnie, nie w bazie danych)
 
+wstawianie treści jednej notatki jako części innej. Np. mam notatkę "foo" o treści "bar" oraz notatkę "baz" w któej chcę mieć własny tekst "lorem" oraz wstawioną za nim treść notatki "foo", a więc cała notatka "baz" miałaby treść "lorem bar", a jeżeli zmieniłbym treść notatki "foo" na "ipsum", to i treść notatki "baz" zmieniłaby się na 
+"lorem ipsum"
+
+Działy notatki. Niech notatka skłąda się z więcej niże jednego pola do edycji
+
 tworzenie nowej notatki jako dziecko 'top', dziecko aktualnie przeglądanej notatki albo rodzeństwo aktualnie przeglądanej notatki
+
+nowa notatka o tytule z zaznaczenia z (wyborem ścieżki? jako rodzeństwo? w 'top'?)
 
 bazowa ścieżka dla zmiennych. Np. wpisujemy w notatce ${base.INT} i będzie to INT bazowej notatki, tutaj - karty postaci. Do użycia np. w notatkach oc zarach, gdzie możemy zastąpić np. 2k4 + INT przez 2K4 + ${base.INT | 'INT'} (default do string 'INT') gdzie base.INT to będzie INT karty postaci, którą wybierzemy jako base. W ten sposób dostaniemy wzór czaru dla konkretniej postaci czy NPCa. Może się przydać też jeżeli zrobimy guzik do rzutu kością - wtedy posiadanie INT byłoby niezbędne do wyznaczenie ostatecznego wyniku (a nie tylko np. [2k4=5]+INT i licz se dalej sam)
 
